--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<a class="codrops-icon codrops-icon--prev" href="https://tympanus.net/Development/GeekyGlasses/" title="Previous Demo"><svg class="icon icon--arrow"><use xlink:href="#icon-arrow"></use></svg></a>
 					<a class="codrops-icon codrops-icon--drop" href="https://tympanus.net/codrops/?p=30373" title="Back to the article"><svg class="icon icon--drop"><use xlink:href="#icon-drop"></use></svg></a>
 				</div>
-				<h1 class="codrops-header__title">Stack Motion Hover Effects</h1>
+				<h1 class="codrops-header__title">Stack Motion Effects on Hover</h1>
 				<a class="github" href="https://github.com/codrops/StackMotionHoverEffects/">/Github</a>
 				<p class="codrops-header__tagline">Decorative motion hover effects for grid items</p>
 				<p class="codrops-header__tagline">Inspired by <a href="http://www.merci-michel.com/projects/">Merci-Michel</a></p>
@@ -211,7 +211,7 @@
 								<span class="column__text">Result</span>
 							</div>
 							<div class="column column--right">
-								<span class="column__text">2045</span>
+								<span class="column__text">2095</span>
 								<span class="column__text">133456</span>
 								<span class="column__text">Positive</span>
 							</div>
