--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</symbol>
 		</svg>
 		<main>
-			<div class="message-mobile">This is a hover effect. Best viewed on desktop.</div>
+			<div class="message-mobile">This is where its at.</div>
 			<header class="codrops-header">
 				<div class="codrops-links">
 					<a class="codrops-icon codrops-icon--prev" href="https://tympanus.net/Development/GeekyGlasses/" title="Previous Demo"><svg class="icon icon--arrow"><use xlink:href="#icon-arrow"></use></svg></a>
@@ -267,83 +267,7 @@
 					</a>
 				</div>
 			</section>
-			<section class="content">
-				<h2 class="content__title">_004</h2>
-				<div class="grid grid--effect-polaris">
-					<a href="#" class="grid__item grid__item--c1">
-						<div class="stack">
-							<div class="stack__deco"></div>
-							<div class="stack__deco"></div>
-							<div class="stack__deco"></div>
-							<div class="stack__deco"></div>
-							<div class="stack__figure">
-								<img class="stack__img" src="img/1.png" alt="Image"/>
-							</div>
-						</div>
-						<div class="grid__item-caption">
-							<h3 class="grid__item-title">anaerobic</h3>
-							<div class="column column--left">
-								<span class="column__text">Period</span>
-								<span class="column__text">Subjects</span>
-								<span class="column__text">Result</span>
-							</div>
-							<div class="column column--right">
-								<span class="column__text">2045</span>
-								<span class="column__text">133456</span>
-								<span class="column__text">Positive</span>
-							</div>
-						</div>
-					</a>
-					<a href="#" class="grid__item grid__item--c2">
-						<div class="stack">
-							<div class="stack__deco"></div>
-							<div class="stack__deco"></div>
-							<div class="stack__deco"></div>
-							<div class="stack__deco"></div>
-							<div class="stack__figure">
-								<img class="stack__img" src="img/2.png" alt="Image"/>
-							</div>
-						</div>
-						<div class="grid__item-caption">
-							<h3 class="grid__item-title">exothermic</h3>
-							<div class="column column--left">
-								<span class="column__text">Period</span>
-								<span class="column__text">Subjects</span>
-								<span class="column__text">Result</span>
-							</div>
-							<div class="column column--right">
-								<span class="column__text">2045</span>
-								<span class="column__text">133456</span>
-								<span class="column__text">Positive</span>
-							</div>
-						</div>
-					</a>
-					<a href="#" class="grid__item grid__item--c3">
-						<div class="stack">
-							<div class="stack__deco"></div>
-							<div class="stack__deco"></div>
-							<div class="stack__deco"></div>
-							<div class="stack__deco"></div>
-							<div class="stack__figure">
-								<img class="stack__img" src="img/3.png" alt="Image"/>
-							</div>
-						</div>
-						<div class="grid__item-caption">
-							<h3 class="grid__item-title">diatomic</h3>
-							<div class="column column--left">
-								<span class="column__text">Period</span>
-								<span class="column__text">Subjects</span>
-								<span class="column__text">Result</span>
-							</div>
-							<div class="column column--right">
-								<span class="column__text">2045</span>
-								<span class="column__text">133456</span>
-								<span class="column__text">Positive</span>
-							</div>
-						</div>
-					</a>
-				</div>
-			</section>
+			
 			<section class="content">
 				<h2 class="content__title">_005</h2>
 				<div class="grid grid--effect-alphard">
